--- a/Kaiserreich Korean Translation/localisation/KR_United_Kingdom_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_United_Kingdom_l_english.yml
@@ -15,7 +15,7 @@ GBR_no_election:0 "선거는 없다"
 GBR_no_election_desc:0 "생디칼리즘이 영국에서 완전히 제거될 때까지 군부가 영국 재건을 관리해야 한다."
 GBR_election:0 "총선거"
 GBR_election_desc:0 "사람들에게 민주주의가 어떤 모습인지 총선거를 통해 다시 일깨워 주어야 한다."
-GBR_truth:0 "신뢰와 화해"
+GBR_truth:0 "진실과 화해"
 GBR_truth_desc:0 "영국 사회 내의 분열은 양측의 실수와 범죄에 대한 공개적인 토론만으로 해결할 수 있다. 신뢰와 화해 위원회는 이 문제를 위한 모임이 될 것이다."
 GBR_art_overcome:0 "충성파의 선전"
 GBR_art_overcome_desc:0 "국내의 많은 예술가들을 지원하는 것은 공적으로 생디칼리즘의 유산에 대한 담론을 촉진시킬 것이다. 짧은 시간 동안에는 우리의 반 생디칼리즘 정책에 대한 비판이 일어나겠지만, 장기적으로 이는 우리를 더욱 단결시킬 것이다."
@@ -257,7 +257,7 @@ UK_economy_syn_idea:0 "생디칼리즘의 경제적 유산"
 UK_military_syn_idea:0 "생디칼리즘의 군사적 유산"
 UK_aristocracy_idea:0 "지방 규율이 복구되다"
 UK_suspend_idea:0 "인신 보호 영장 유배"
-UK_truth_idea:0 "신뢰와 화해 위원회 "
+UK_truth_idea:0 "진실과 화해 위원회 "
 UK_citizen_idea:0 "군사 정부 하의 시민들"
 UK_agitprop_idea:0 "선전 활동"
 UK_righteous_cause_idea:0 "정당한 이유"
