--- a/Kaiserreich Korean Translation/localisation/KR_Ottoman_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Ottoman_l_english.yml
@@ -138,7 +138,7 @@ ott_investigation_idea:0 "수사"
 ott_investigation_idea_desc:0 "얄로바 왕실 토지 수입의 횡령에 관한 왕실 조사"
 
 ### Parties ###
-OTT_totalist_party:0 "민중협약"
+OTT_totalist_party:0 "민중협약당"
 OTT_totalist_party_long:0 "민중협약당"
 OTT_syndicalist_party:0 "OAF"
 OTT_syndicalist_party_long:0 "오스만 노동당"
@@ -150,8 +150,8 @@ OTT_social_liberal_party:0 "자유연합당"
 OTT_social_liberal_party_long:0 "자유연합당"
 OTT_market_liberal_party:0 "AİF"
 OTT_market_liberal_party_long:0 "민중경제당"
-OTT_social_conservative_party:0 "이슬람근본주의"
-OTT_social_conservative_party_long:0 "이슬람근본주의당"
+OTT_social_conservative_party:0 "이슬람근본당"
+OTT_social_conservative_party_long:0 "이슬람근본당"
 OTT_authoritarian_democrat_party:0 "개신당"
 OTT_authoritarian_democrat_party_long:0 "개신당"
 OTT_paternal_autocrat_party:0 "오스만의은총"
@@ -826,8 +826,8 @@ ott.112.a:0 "이것에 대해 조치를 취하라!"
 ott.112.b:0 "그냥 내버려 둬, 이건 너무 위험해"
 
 ott.113.t:0 "경찰 서장이 살해되다!"
-ott.113.d1:0 "끔찍한 소식이다! Emniyet-i Umumiye의 대표 Muharrem Arif Paşa는 오늘 아침에 그의 집 밖에서 살해당했다! 술탄의 명령에 따라 Muharrem Arif Paşa는 횡령에 관한 '부패로의 조사'를 이끌고 있었다. 몇몇 목격자들은 출발하기 전에 표식없는 하얀 차에서 Muharrem Paşa에게 두 명의 암살자가 총격을 가하는 것을 보고했다고 보도했다. 그 암살 사건이 얄로바 사건과 연관되어 있다는 것은 의심의 여지가 없으며, 하얀 자동차 수색은 이미 진행 중이다."
-ott.113.d2:0 "끔찍한 소식이다! Emniyet-i Umumiye의 대표 Muharrem Arif Paşa는 오늘 아침에 그의 집 밖에서 살해당했다! 의회의 명령에 따라 Muharrem Arif Paşa는 횡령에 관한 '부패로의 조사'를 이끌고 있었다. 몇몇 목격자들은 출발하기 전에 표식없는 하얀 차에서 Muharrem Paşa에게 두 명의 암살자가 총격을 가하는 것을 보고했다고 보도했다. 그 암살 사건이 얄로바 사건과 연관되어 있다는 것은 의심의 여지가 없으며, 하얀 자동차 수색은 이미 진행 중이다."
+ott.113.d1:0 "끔찍한 소식이다! 총괄 경비대의 대표 Muharrem Arif Paşa는 오늘 아침에 그의 집 밖에서 살해당했다! 술탄의 명령에 따라 Muharrem Arif Paşa는 횡령에 관한 '부패로의 조사'를 이끌고 있었다. 몇몇 목격자들은 출발하기 전에 표식없는 하얀 차에서 Muharrem Paşa에게 두 명의 암살자가 총격을 가하는 것을 보고했다고 보도했다. 그 암살 사건이 얄로바 사건과 연관되어 있다는 것은 의심의 여지가 없으며, 하얀 자동차 수색은 이미 진행 중이다."
+ott.113.d2:0 "끔찍한 소식이다! 총괄 경비대의 대표 Muharrem Arif Paşa는 오늘 아침에 그의 집 밖에서 살해당했다! 의회의 명령에 따라 Muharrem Arif Paşa는 횡령에 관한 '부패로의 조사'를 이끌고 있었다. 몇몇 목격자들은 출발하기 전에 표식없는 하얀 차에서 Muharrem Paşa에게 두 명의 암살자가 총격을 가하는 것을 보고했다고 보도했다. 그 암살 사건이 얄로바 사건과 연관되어 있다는 것은 의심의 여지가 없으며, 하얀 자동차 수색은 이미 진행 중이다."
 ott.113.a:0 "우리는 이것의 진상을 규명할 것이다!"
 ott.113.b:0 "이것은 분명히 말벌의 둥지다. 수사를 끝내라."
 
