--- a/Kaiserreich Korean Translation/localisation/KR_Union_of_Britain_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Union_of_Britain_l_english.yml
@@ -417,106 +417,106 @@ uob.60.t:0 "외교적 계획"
 uob.60.d:0 "이제 우리는 더 많은 외교적 접근을 시도하는 것을 결정하였고 우리의 외교관들은 그들이 성취해야 할 것이 무엇인지에 대한 우리의 결정을 기다리고 있다."
 uob.60.a:0 "아일랜드는 런던으로부터 직접 통치되어야 한다!"
 uob.60.b:0 "아일랜드는 생디칼리즘 공화국이 되어야 한다!"
-uob.60.c:0 "군사 기지와 우호 관계로 "
-uob.61.t:0 "Ireland is isolated!"
-uob.61.d:0 "Now that we have been successful in isolating Ireland diplomatically, we can send them our demands!"
-uob.61.a:0 "Let's see if they accept.."
-uob.62.t:0 "Ireland is isolated!"
-uob.62.d:0 "Now that we have been successful in isolating Ireland diplomatically, we can send them our demands!"
-uob.62.a:0 "Let's see if they accept.."
-uob.63.t:0 "Ireland is isolated!"
-uob.63.d:0 "Now that we have been successful in isolating Ireland diplomatically, we can send them our demands!"
-uob.63.a:0 "Let's see if they accept.."
-uob.64.t:0 "Britain demands annexation!"
-uob.64.d:0 "Our worst fears have been realised, the British government has demanded the re-annexation of Ireland. Ireland is to be an oppressed province once again. Although the situation looks hopeless the nation is near universally in favour of fighting until the bitter end, come woe or weal."
-uob.64.a:0 "We have no choice.."
-uob.64.b:0 "We'll make them pay for every inch they take!"
-uob.65.t:0 "Britain demands a syndicalist government!"
-uob.65.d:0 "The British have decided to spread their so-called syndicalist 'revolution' and have demanded that we step down and put a socialist government into power, no doubt puppets of the British. Although Ireland will in theory remain independent many are still against giving in to syndicalism."
-uob.65.a:0 "Give in, it's for the best.."
-uob.65.b:0 "We will not become a syndicalist puppet state!"
-uob.66.t:0 "Britain demands influence and bases in Ireland!"
-uob.66.d:0 "The British government has demanded that we allow them to base their troops in Ireland and have influence in the Irish government, which they will no doubt use to promote socialism. Although the terms could've been far worse some are still against it."
-uob.66.a:0 "We've been lucky, let's accept it."
-uob.66.b:0 "Ireland must remain completely independent!"
-uob.67.t:0 "Irish submission"
-uob.67.d:0 "Seeing no other options the Irish leadership was forced to accept our demands. The proud Irish state, once considered a potential threat to the security of the Union of Britain, exists no more!"
-uob.67.a:0 "Hooray!"
-uob.68.t:0 "Ireland refuses our demands!"
-uob.68.d:0 "As expected, the Irish have refused our demands of re-annexation and have decided to fight until the bitter end."
-uob.68.a:0 "So be it."
-uob.68.b:0 "Maybe these dealings with Ireland were a mistake.."
-uob.69.t:0 "Irish submission"
-uob.69.d:0 "Seeing no other options the Irish leadership was forced to accept our demands. The proud Irish state, once considered a potential threat to the security of the Union of Britain, is now our loyal ally!"
-uob.69.a:0 "Hooray!"
-uob.70.t:0 "Ireland refuses our demands!"
-uob.70.d:0 "The Irish government has refused our demands to put in power a socialist government and have decided to resist us!"
-uob.70.a:0 "So be it."
-uob.70.b:0 "Maybe these dealings with Ireland were a mistake.."
-uob.71.t:0 "Irish submission"
-uob.71.d:0 "The free state of Ireland, without any serious international backing, was forced to accept our demands to grant us military access and sign a non-aggression pact with us. Once more British diplomacy achieved a grand victory!"
-uob.71.a:0 "A Job well done!"
-uob.72.t:0 "Ireland refuses our demands!"
-uob.72.d:0 "Despite our generous and merciful demands, the Irish government has still refused and decided to resist us!"
-uob.72.a:0 "So be it."
-uob.72.b:0 "Maybe these dealings with Ireland were a mistake.."
-uob.73.t:0 "The Irish cower"
-uob.73.d:0 "The Irish state has foolishly remained neutral during our naval exercise, leaving them without any major international backing. Now we can decide how to deal with them."
-uob.73.a:0 "Hurrah, for gunboat diplomacy still works!"
-uob.74.t:0 "Britain defends the Workers"
-uob.74.d:0 "The leaders of the Union of Britain have announced their intention go with the Commune of France. "Cooperation between workers of all nationalities is needed to defend Syndicalism in this dangerous world", an influential Trade Union official is cited. It remains to be seen how much this new development will influence the balance of power."
-uob.74.a:0 "Yay for Britain!"
-uob.75.t:0 "Britain joins the Third Internationale!"
-uob.75.d:0 "The Union of Britain has now formally joined the alliance of the Syndicalist nations of the world. Their military will stand ready to defend the rights of the workers."
-uob.75.a:0 "Interesting."
-uob.76.t:0 "Germany and Britain at war"
-uob.76.d:0 "We have resisted the British for many long years, and now the Germans and the British are at war. Should we send a request to ally with them against our common enemy?"
-uob.76.a:0 "Naturally!"
-uob.76.b:0 "Where were our so-called 'gallant allies' before?"
-uob.77.t:0 "Ireland asks to join Mitteleuropa"
-uob.77.d:0 "The Irish have heroically held out against the Union of Britain for years now, and been the subject of much praise and admiration by both Mitteleuropa and Entente nations. Now that we are also at war with the Union, the Irish wish to join us. What shall we say?"
-uob.77.a:0 "Of course!"
-uob.77.b:0 "It's not worth the trouble.."
-uob.78.t:0 "Germany accepts!"
-uob.78.d:0 "After years of holding out against the Union of Britain, we finally have allies in our struggle! Our courage and determination in the face of overwhelming odds has been worth it."
-uob.78.a:0 "They shall not say that Irishmen fight like heroes, but that heroes fight like Irishmen!"
-uob.79.t:0 "Germany refuses!"
-uob.79.d:0 "Our so-called 'gallant allies in Europe' have betrayed us!"
-uob.79.a:0 "Backstabbers.."
-uob.80.t:0 "Canada and Britain at war"
-uob.80.d:0 "We have resisted the British for many long years, and now the Canadians and the British are at war. Should we send a request to ally with them against our common enemy?"
-uob.80.a:0 "Naturally! Any ally is needed right now!"
-uob.80.b:0 "Ally with the empire we fought for freedom against? No!"
-uob.81.t:0 "Ireland asks to join the Entente"
-uob.81.d:0 "The Irish have heroically held out against the Union of Britain for years now, and been the subject of much praise and admiration by both Entente and Mitteleuropa nations. Now that we are also at war with the Union, the Irish wish to join us. What shall we say?"
-uob.81.a:0 "Of course!"
-uob.81.b:0 "You're still traitors to the Empire!"
-uob.82.t:0 "Canada accepts!"
-uob.82.d:0 "After years of holding out against the Union of Britain, we finally have allies in our struggle! Our courage and determination in the face of overwhelming odds has been worth it."
-uob.82.a:0 "They shall not say that Irishmen fight like heroes, but that heroes fight like Irishmen!"
-uob.83.t:0 "Canada refuses!"
-uob.83.d:0 "Despite our common enemy, the Canadians have refused to allow us to join the Entente!"
-uob.83.a:0 "They're still Brits in the end.."
-uob.84.t:0 "The Fate of Ireland"
-uob.84.d:0 "Our men march through Dublin, and the Irish Republican Army has shattered in the face of our armed forces. In the meantime we must decide on the future of Ireland. Some argue that Ireland should be annexed into the Union of Britain, while others argue that this would be an act of unsocialist imperialism and that doing so would not be supported by the Irish people, bringing us into a bloody guerrilla war."
-uob.84.a:0 "Set up an Irish socialist republic!"
-uob.84.b:0 "Of course Ireland shall be independent!"
-uob.84.c:0 "Ireland must be directly ruled from London!"
-uob.84.e:0 "Give Ireland only limited autonomy."
-uob.85.t:0 "End of the Second Irish War of Independence"
-uob.85.d:0 "With Ireland an independent nation once more and hostilities between our two peoples having ceased, the IRA have finally ceased their guerrilla warfare and bombing campaign against us."
-uob.85.a:0 "Finally!"
-uob.86.t:0 "Riots in Ireland"
-uob.86.d:0 "Today many people turned out for protests and demonstrations against our rule in Ireland. The protests soon turned into rioting, causing much damage in acts of vandalism and injuring many."
-uob.86.a:0 "Damn!"
-uob.87.t:0 "IRA ambushes!"
-uob.87.d:0 "In a continuation of their tactics from the Irish War of Independence, the IRA have staged ambushes against our troops throughout Ireland!"
-uob.87.a:0 "Damn!"
-uob.88.t:0 "IRA bombing!"
-uob.88.d:0 "The IRA carried out a bomb attack today, dealing large damage to our infastructure in that area."
+uob.60.c:0 "군사 기지와 우호 관계로 충분하다."
+uob.61.t:0 "아일랜드는 고립되었다!"
+uob.61.d:0 "외교적으로 아일랜드를 고립시키는데 성공하였으니, 그들에게 우리의 요구를 보낼 수 있다!"
+uob.61.a:0 "그들이 받아들이는지 보자…"
+uob.62.t:0 "아일랜드는 고립되었다!"
+uob.62.d:0 "외교적으로 아일랜드를 고립시키는데 성공하였으니, 그들에게 우리의 요구를 보낼 수 있다!"
+uob.62.a:0 "그들이 받아들이는지 보자…"
+uob.63.t:0 "아일랜드는 고립되었다!"
+uob.63.d:0 "외교적으로 아일랜드를 고립시키는데 성공하였으니, 그들에게 우리의 요구를 보낼 수 있다!"
+uob.63.a:0 "그들이 받아들이는지 보자…"
+uob.64.t:0 "브리튼이 합병을 요구하다!"
+uob.64.d:0 "우리 최악의 공포가 현실화되었다, 브리튼 정부는 아일랜드의 재합병을 요구해왔다. 아일랜드는 다시 한번 억압받는 지역이 될 것이다. 비록 이 국가에 희망은 없어 보이지만, 비애 또는 상처가 따라오는 씁슬한 결말이 올 때까지 저항하자는 의견으로 단합되었다. "
+uob.64.a:0 "선택권이 없다.."
+uob.64.b:0 "그들이 점거하는 단 일부라도 값을 치루게 하겠다!"
+uob.65.t:0 "브리튼이 생디칼리스트 정부를 요구하다!"
+uob.65.d:0 "브리튼은 그들의 소위 생디칼리스트 ‘혁명’의 확산을 결정하며 우리에게 사회주의 정부에 실권을 넘기라 요구하였고, 의심할 수 없이 이는 브리튼의 꼭두각시가 될 것이다. 비록 아일랜드는 이론상 독립을 유지할 것이지만 대다수는 생디칼리즘의 합류에 저항하고 있다."
+uob.65.a:0 "합류하자, 이게 최선이다..."
+uob.65.b:0 "우리는 생디칼리스트 꼭두각시가 되지 않을 것이다!"
+uob.66.t:0 "브리튼이 아일랜드의 영향력과 군사기지를 요구한다!"
+uob.66.d:0 "브리튼 정부는 아일랜드에 그들의 군대가 주둔할 군사기지와 아일랜드 정부에 대한 영향력을 요구해 왔는데, 이는 사회주의를 촉진시키기 위함이 당연하다. 비록 이는 훨씬 더 심각 해졌을 수 도 있었지만 몇몇은 이것 마저도 거부한다."
+uob.66.a:0 "운이 좋았다, 받아들이자."
+uob.66.b:0 "아일랜드는 완벽하게 독립을 유지해야 한다!"
+uob.67.t:0 "아일랜드의 복종"
+uob.67.d:0 "다른 선택권이 없으므로 아일랜드 지도부는 우리의 요구를 받아들였다. 우리의 자랑스러운 아일랜드 지역, 한때 브리튼 연방의 잠재적 안보 위협으로 여겨졌었던 곳은 이제 더 이상 존재하지 않는다!"
+uob.67.a:0 "만세!"
+uob.68.t:0 "아일랜드가 우리의 요구를 거절하다!"
+uob.68.d:0 "예상한 대로, 아일랜드는 우리의 재합병에 대한 요구를 거절했고 최후까지 싸울 것을 결의했다."
+uob.68.a:0 "그리 되었군."
+uob.68.b:0 "아일랜드와 거래하는 것은 실수였을 지도 모르겠군.."
+uob.69.t:0 "아일랜드의 복종"
+uob.69.d:0 "다른 선택권이 없으므로 아일랜드 지도부는 우리의 요구를 받아들였다. T우리의 자랑스러운 아일랜드 지역, 한때 브리튼 연방의 잠재적 안보 위협으로 여겨졌었던 곳은 이제 우리의 충실한 동맹이다!"
+uob.69.a:0 "만세!"
+uob.70.t:0 "아일랜드가 우리의 요구를 거절하다!"
+uob.70.d:0 "아일랜드 정부는 사회주의 정권에 실권을 넘기는 것을 거부하고 우리에 저항하는 것을 결의했다!"
+uob.70.a:0 "그리 되었군."
+uob.70.b:0 "아일랜드와 거래하는 것은 실수였을 지도 모르겠군.."
+uob.71.t:0 "아일랜드의 복종"
+uob.71.d:0 "아일랜드 자유국은, 심각한 국제적 지원 없이, 우리에 대한 군사 통행권 제공과 불가침 조약 서명을 받아들였다. 다시 한번 브리튼 외교술이 위대한 성공을 이루어 냈다!"
+uob.71.a:0 "잘 되었다!"
+uob.72.t:0 "아일랜드가 우리의 요구를 거절하다!"
+uob.72.d:0 "우리의 자비롭고 자애로운 제안에도 불구하고, 아일랜드 정부는 여전히 거절하고 우리에게 저항할 것을 결의하였다!"
+uob.72.a:0 "그리 되었군."
+uob.72.b:0 "아일랜드와 거래하는 것은 실수였을 지도 모르겠군.."
+uob.73.t:0 "아일랜드가 겁먹다"
+uob.73.d:0 "아일랜드는 멍청하게도 우리의 해군 훈련동안 중립으로 남아있었으며, 그들은 어떤 주요 국제적 지원이 없었다. 이제 우린 그들을 어떻게 처리해야 할 지 정해야 한다."
+uob.73.a:0 "포함 외교가 여전히 먹힘에 환희하자!"
+uob.74.t:0 "브리튼이 노동자들을 수호하다"
+uob.74.d:0 "브리튼 연방의 지도자들은 프랑스 코뮨과 협력할 의도를 발표했다. “모든 국가간 노동자간의 협력은 이 위험한 세상에서 노동자들을 수호하는데 필요하다”,고 영향력 있는 노동 조합이 공식적으로 첨언하였다. 이 새로운 발전이 힘의 균형에 얼마나 영향을 미칠 지는 지켜봐야 한다."
+uob.74.a:0 "브리튼을 위해 찬성을!"
+uob.75.t:0 "브리튼이 제 3 인터네셔널에 합류하다!"
+uob.75.d:0 "브리튼 연방은 정식으로 세계의 생디칼리스트 국가간 동맹에 합류하였다. 그들의 군사력은 노동자의 권리를 지킬 준비가 되어 있을 것이다."
+uob.75.a:0 "흥미롭군."
+uob.76.t:0 "독일과 브리튼간의 전쟁"
+uob.76.d:0 "우리는 브리튼에 긴 세월동안 저항해 왔고, 독일과 브리튼간에 전쟁이 발발했다. 우리의 공적에 대항하기 위해 동맹 제의를 보내야 하는가?"
+uob.76.a:0 "당연하다!"
+uob.76.b:0 "우리의 소위 ‘용맹한 협력자들’이 이전에 어디에 있더라?"
+uob.77.t:0 "아일랜드가 중앙유럽 공동체에 합류를 요청하다"
+uob.77.d:0 "아일랜드는 오랜 세월동안 브리튼 연방에 영웅적으로 대항해 왔으며, 이는 중앙유럽 공동체와 협상국 양측에 많은 응원과 경의를 사 왔다. 이제 우리 또한 연방과의 전쟁에 돌입했으며, 아일랜드는 우리와 함께 하길 원한다. 무어라 말해야 하는가?"
+uob.77.a:0 "물론이다!"
+uob.77.b:0 "문제만 일으킬 것이다.."
+uob.78.t:0 "독일이 받아들이다!"
+uob.78.d:0 "수년간의 브리튼 연방에 대한 대항 끝에, 우리는 마침내 우리의 투쟁을 함께할 동맹을 얻었다! 우리의 압도적인 문제에 대항하는 용기와 투지는 가치를 지니고 있다."
+uob.78.a:0 "그들은 아일랜드인이 영웅처럼 싸우는게 아닌, 영웅이 아일랜드인처럼 싸운다고 말할 것이다!"
+uob.79.t:0 "독일이 거부하다!"
+uob.79.d:0 "소위 '유럽의 용맹한 협력자'가 우리를 배신했다!"
+uob.79.a:0 "배신자들.."
+uob.80.t:0 "캐나다와 브리튼간의 전쟁"
+uob.80.d:0 "우리는 브리튼에 긴 세월동안 저항해 왔고, 캐나다와 브리튼간에 전쟁이 발발했다. 우리의 공적에 대항하기 위해 동맹 제의를 보내야 하는가?"
+uob.80.a:0 "당연하다! 어떤 동맹이라도 당장 필요하다"
+uob.80.b:0 "우리의 자유를 위해 싸웠던 제국과의 동맹? 불가능하다!"
+uob.81.t:0 "아일랜드가 협상국에 합류를 요청하다"
+uob.81.d:0 "아일랜드는 오랜 세월동안 브리튼 연방에 영웅적으로 대항해 왔으며, 이는 중앙유럽 공동체와 협상국 양측에 많은 응원과 경의를 사 왔다. 이제 우리 또한 연방과의 전쟁에 돌입했으며, 아일랜드는 우리와 함께 하길 원한다. 무어라 말해야 하는가?"
+uob.81.a:0 "물론이다!"
+uob.81.b:0 "여전한 제국의 반역자들이다!"
+uob.82.t:0 "캐나다가 받아들이다!"
+uob.82.d:0 "수년간의 브리튼 연방에 대한 대항 끝에, 우리는 마침내 우리의 투쟁을 함께할 동맹을 얻었다! 우리의 압도적인 문제에 대항하는 용기와 투지는 가치를 지니고 있다."
+uob.82.a:0 "그들은 아일랜드인이 영웅처럼 싸우는게 아닌, 영웅이 아일랜드인처럼 싸운다고 말할 것이다!"
+uob.83.t:0 "캐나다가 거부하다!"
+uob.83.d:0 "공통 적이 있음에도 불구하고 캐나다는 협상국으로의 가입을 거부했다!"
+uob.83.a:0 "그들도 결국엔 영국인이로군..."
+uob.84.t:0 "아일랜드의 운명"
+uob.84.d:0 "우리의 군사가 더블린을 향해 행진하고, 아일랜드 공화국군은 우리의 군 전력에 맞서다 붕괴하였다. 이러는 동안 우리는 아일랜드의 미래를 결정해야 한다. 몇몇은 아일랜드가 브리튼 연방에 합병되어야 한다고 주장하고, 다른 일부는 그것은 비사회주의 제국주의적 행동임을 주장하면서 합병은 아일랜드 국민들에게 지원받지 못할 것이며, 우리를 피비린내나는 게릴라 전쟁으로 끌고 갈 것이라 한다."
+uob.84.a:0 "아일랜드 사회주의 공화국을 설립한다!"
+uob.84.b:0 "아일랜드는 당연히 독립하여야 한다!"
+uob.84.c:0 "아일랜드는 런던이 직접 통치할 것이다!"
+uob.84.e:0 "아일랜드에 제한적 자치를 부여한다."
+uob.85.t:0 "2차 아일랜드 독립전쟁이 종결되다"
+uob.85.d:0 "아일랜드가 다시 독립국이 되면서 양측간의 적대 행위는 중단되었고, IRA 는 우리를 목표로 한 게릴라 전투와 폭탄 테러를 마침내 중단하였다."
+uob.85.a:0 "마침내!"
+uob.86.t:0 "아일랜드에서의 폭동"
+uob.86.d:0 "오늘 많은 사람들이 우리의 아일랜드 통치에 대항하여 시위와 데모를 펼쳤다. 이 시위는 곧 폭동으로 변질되었고, 다수를 부상 입히며 반달 행위를 통해 엄청난 피해를 입혔다."
+uob.86.a:0 "젠장!"
+uob.87.t:0 "IRA의 매복!"
+uob.87.d:0 "아일랜드 독립 전쟁 전술의 연장선으로, IRA는 아일랜드 전역에서 우리에게 대항하기 위해 매복공격을 감행하고 있다!"
+uob.87.a:0 "젠장!"
+uob.88.t:0 "IRA의 폭탄테러!"
+uob.88.d:0 "오늘 IRA가 폭탄 테러를 수행했고, 그 지역에서 상당한 기반시설의 피해를 입혔다!"
 uob.88.a:0 "Damn!"
-uob.89.t:0 "IRA sabotage!"
-uob.89.d:0 "The IRA have bombed one of our factories in an attempt to sabotage our industry!"
+uob.89.t:0 "IRA의 사보타주!"
+uob.89.d:0 "IRA가 우리의 산업에 사보타주를 하기 위해 공장 중 하나에 폭탄을 던졌다!"
 uob.89.a:0 "Damn!"
 uob.90.t:0 "The Administration of Ireland"
 uob.90.d:0 "It has been two years since we annexed Ireland, and the IRA have been persistently resisting our forces, determined to restore Irish independence. We have three options open to us, we could maintain the status quo, release Ireland as independence as a socialist republic, or suspend liberties in Ireland and begin interning enemies of the Union."
