--- a/Kaiserreich Korean Translation/localisation/KR_Illyria_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Illyria_l_english.yml
@@ -2,51 +2,51 @@ l_english:
 
 ### Parties ###
 ILL_totalist_party:0 "SRT"
-ILL_totalist_party_long:0 "Socijalistička radnička partija (totalistička)"
+ILL_totalist_party_long:0 "사회노동당 (전체주의)"
 ILL_syndicalist_party:0 "SRS"
-ILL_syndicalist_party_long:0 "Socijalistička radnička partija (sindikalistička)"
+ILL_syndicalist_party_long:0 "사회노동당 (생디칼리즘)"
 ILL_radical_socialist_party:0 "SRP"
-ILL_radical_socialist_party_long:0 "Socijalistička radnička partija"
+ILL_radical_socialist_party_long:0 "사회노동당"
 ILL_social_democrat_party:0 "NSS"
-ILL_social_democrat_party_long:0 "Narodno-socijalistička stranka"
+ILL_social_democrat_party_long:0 "인민사회당"
 ILL_social_liberal_party:0 "DS"
-ILL_social_liberal_party_long:0 "Demokratska stranka"
+ILL_social_liberal_party_long:0 "민주당"
 ILL_market_liberal_party:0 "BSS"
-ILL_market_liberal_party_long:0 "Bunjevačko-šokačka stranka"
+ILL_market_liberal_party_long:0 "분네브치-쇼크치 당"
 ILL_social_conservative_party:0 "IPSS"
-ILL_social_conservative_party_long:0 "Ilirska pučka seljačka stranka"
+ILL_social_conservative_party_long:0 "일리리아 인민-농민당"
 ILL_authoritarian_democrat_party:0 "IPS"
-ILL_authoritarian_democrat_party_long:0 "Ilirska pučka stranka"
+ILL_authoritarian_democrat_party_long:0 "일리리아 인민당"
 ILL_paternal_autocrat_party:0 "SP"
-ILL_paternal_autocrat_party_long:0 "Stranka prava"
+ILL_paternal_autocrat_party_long:0 "권리당"
 ILL_national_populist_party:0 "Ustaše"
-ILL_national_populist_party_long:0 "Ustaše"
+ILL_national_populist_party_long:0 "우스타샤"
 
 ### Ideas ###
-ILL_croatian_command:0 "Croatian Officers"
-ILL_croatian_command_desc:0 "The Croatian people fought to make an Illyria free of Austria a reality, while the rest of the so called Illyrians hid in their cities and did nothing. It is for this reason that we must restrict all officer position to Croatians at the cost of alienating the rest of our countrymen."
+ILL_croatian_command:0 "크로아티아인 공무원"
+ILL_croatian_command_desc:0 "크로아티아인들은 일리리아를 오스트리아로부터 자유롭게 하기 위해 싸웠고, 다른 일리리안인들이 도시에 숨어 아무것도 하지 않았습니다. 이러한 이유로 우리는 다른 국민들을 빼놓고 모든 공직을 크로아티아인들만 오를 수 있도록 제한해야 합니다."
 
-ILL_federated_army:0 "United Officer Corp"
-ILL_federated_army_desc:0 "Despite all odds, we have managed to win against all who sought to destroy our fledgling nation, but there is much still left to do. All the military officers of Illyria must be pooled into a single and united Illyrian Officer Corp."
+ILL_federated_army:0 "통합 일리리아 장교단"
+ILL_federated_army_desc:0 "우리는 모든 역경에도 불구하고 신생국을 파괴하려는 이들을 이겨 냈지만, 여전히 할 일이 많이 남아 있습니다. 일리리아의 모든 군 장교들을 하나의 통합 일리리아 장교단으로 모아야 합니다."
 
 ### Events ###
-illyria.1.t:0 "Kingdom of Illyria"
-illyria.1.d:0 "The Triune Kingdom of Illyria, which consists of the former Kingdom of Croatia-Slavonia, Kingdom of Dalmatia and Condominium of Bosnia and Herzegovina was proclaimed after the Crisis in Austro-Hungary and German Intervention in 1922. The creation of Illyria was proposed by the loyal to Vienna Croatian aristocrats and officers of the Austro-Hungarian Army, who promised to be loyal to the Kaiser Otto and Austria, but claimed more autonomy and the end of the Hungarian rule on the lands of the South Slavs. Though the Triune Kingdom should have become a home for the Catholic Croats, Orthodox Serbs and Muslim Bosniaks, in fact there are a lot of controversies between these nations. The Serbs want to reunite with their Serbian Motherland, the Bosniaks want to get more independence, and the Croats, who have a relative majority in the country, want to strengthen their position in the country and reorganise it into the Great Croatia. But now the Austrians help us to secure the order of our Balkan Kingdom."
-illyria.1.a:0 "Our Beautiful Homeland!"
+illyria.1.t:0 "일리리아 왕국"
+illyria.1.d:0 "전 크로아티아-슬라보니아 왕국, 달마티아 왕국, 보스니아 헤르체고비나 공동통치령을 포함하는 일리리아 삼중왕국은 1922년 오스트리아-헝가리 위기와 독일의 간섭 후에 만들어졌습니다. 오토 황제와 오스트리아에 충성을 맹세한 빈 크로아티아 귀족들과 오스트리아-헝가리 제국의 육군 장교들이 일리리아의 탄생을 제안했지만, 왕국의 탄생으로 자치권이 늘어났고, 결국 남슬라브인들의 땅에 대한 헝가리의 통치는 끝이 났습니다. 삼중왕국은 카톨릭교도 크로아티아인과 정교도 세르비아인, 무슬림 보스니아인들의 보금자리가 되었어야 했지만, 사실 이들 간에는 많은 반목이 있습니다. 세르비아인들은 세르비아와 다시 통합하기를 원하고, 보스니아인들은 더 큰 자치권을 원합니다. 왕국의 다수 민족인 크로아티아인들은 그들의 세력을 강화하여 삼중왕국을 대 크로아티아 왕국으로 바꾸고자 합니다. 하지만 오스트리아는 우리 왕국의 질서를 유지하는 데에 도움을 주고 있습니다."
+illyria.1.a:0 "아름다운 우리 조국이여!"
 
 illyria.2.t:0 "Matica ilirska"
 illyria.2.d:0 "'Matica ilirska' ('Parent body of the Illyrians') is the oldest educational organisation in Illyria, which started its activity as a book publishing company in 1842. The main aim of 'Matica' is the promotion of the Illyrian culture and language and also support to the mutual understanding between the nations of Illyria. With help of the 'Matica ilirska' the leaders of Illyria try to form a well-educated and an united Illyrian nation. Now one of the most important missions of the organisation is the codification of the Illyrian language standard. Though it has been a hard work, but it seems that the most famous Illyrian writers and linguists have finally negotiated, which rules of the language our young generation will learn at schools. The creation of the united Illyrian nation is closer now!"
 illyria.2.a:0 "Wistful is my Slavic soul, I'm Illyrian!"
 
-illyria.3.t:0 "Status of Montenegro"
-illyria.3.d:0 "Montenegro was a small, but independent kingdom, which even the Ottoman Empire couldn't annex. But it was occupied in 1916 by the forces of Austro-Hungary and was incorporated into Illyria in 1922. But even now the Orthodox Montenegrians have a large autonomy in our state and accepted only these orders from Zagreb, which can't affect the life of this distant part of our country. More over, many of the local citizens are friendly to Serbia - our main enemy on the Balkans. We should keep it in mind, since any violation of the Montenegrian rights can provoke a crisis between Illyria and Serbia and even lead to a new Balkan war."
-illyria.3.a:0 "Don't count on them."
+illyria.3.t:0 "몬테네그로의 지위"
+illyria.3.d:0 "몬테네그로는 작지만 독립 왕국이었고, 오스만 제국조차 합병할 수 없었습니다. 하지만 몬테네그로는 1916년 오스트리아-헝가리군에 의해 점령되었고 1922년 일리리아에 편입되었습니다. 하지만 지금까지도 몬테네그로 정교도들은 일리리아에서 큰 자치권을 가지고 있으며, 이 먼 지역의 삶에 영향을 줄 수 없는 자그레브에서의 명령만을 받아들입니다. 게다가 많은 현지인들은 발칸 반도에 있는 우리의 주적 세르비아에 우호적입니다. 몬테네그로인들의 권리를 침해하면 일리리아와 세르비아 간의 위기를 일으킬 수 있고, 심지어 발칸 전쟁이 또 다시 일어날 수 있다는 것을 우리는 명심해야 합니다."
+illyria.3.a:0 "그들을 믿지마라."
 
-illyria.4.t:0 "Sarajevo Agreement"
-illyria.4.d:0 "The nations of our Triune Kingdom use one South Slavic language, but the Croat, Serbian and Bosnian versions of it have some differences. More over, the Serbs use the Cyrillic script, while the Croats and Bosniaks prefer the Latin script. 'Matica ilirska' has already established the united standards of the language, which will be used in our Kingdom, but we still don't know, how to name our language. We can name it 'Croatian' and use the Latin script, since the Croats constitute the majority in our country with 60% of the population. Another possible name is the 'Serbo-Croatian' with both Cyrillic and Latin scripts to represent the role of the Serbs, who are the main minority in Illyria with 30% of our citizens. Or we can name the language 'Illyrian' to encourage the unification of our people and use the Latin script."
-illyria.4.a:0 "The Croat language is the only one in Illyria!"
-illyria.4.b:0 "Long live Brotherhood and Unity - the Serbo-Croatian!"
-illyria.4.c:0 "We are the Illyrians - and we speak Illyrian!"
+illyria.4.t:0 "사라예보 협정"
+illyria.4.d:0 "일리리아 삼중 제국에서는 하나의 언어, 남슬라브어를 사용하지만 크로아티아 방언과 세르비아 방언, 보스니아 방언은 약간 차이가 있습니다. 게다가 세르비아인은 키릴 문자를 사용하지만 보스니아인과 크로아티아인은 라틴 문자를 사용합니다. '마티차 일리르스카'에서 언어의 통합 표준을 만들었는데, 아직 이를 어떻게 불러야 할지 모릅니다. 크로아티아인이 전체의 60%를 차지하므로 이 언어를 '크로아티아어'라고 하고 라틴 문자를 쓸 수도 있습니다. 다른 방안은 일리리아의 30%를 차지하는 세르비아인을 위해 '세르보-크로아티아어'라고 이름은 붙이고 라틴 문자와 키릴 문자를 공용하는 것입니다. 아니면 국민의 단결을 장려하기 위해 '일리리아어'라고 이름 붙이고 라틴 문자를 사용할 수도 있습니다."
+illyria.4.a:0 "크로아티아어가 일리리아의 유일한 언어이다!"
+illyria.4.b:0 "형재애, 단결 만세! 세르보-크로아티아어로 하자!"
+illyria.4.c:0 "우린 일리리아인이다. 그리고 일리리아어를 쓴다!"
 
 illyria.5.t:0 "Highway 'Unity'"
 illyria.5.d:0 "The construction of the highway 'Unity' was proposed by our prime minister in order to connect the biggest cities of the Illyria - Zagreb, Sarajevo and Podgorica. With the Austrian subsidies we will be able to hire enough workers and complete the construction soon. This project will also help us to reduce the unemployment rate in many our regions and revive the construction market in the Kingdom."
