--- a/Kaiserreich Korean Translation/localisation/KR_Countries_Cosmetic_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Countries_Cosmetic_l_english.yml
@@ -116,36 +116,36 @@ RRM_republic_paternal_autocrat:0 "루마니아 공화국"
 RRM_republic_paternal_autocrat_ADJ:0 "루마니아"
 RRM_republic_paternal_autocrat_DEF:0 "루마니아 공화국"
 
-RRM_WAL_totalist:0 "Wallachia"
-RRM_WAL_totalist_ADJ:0 "Wallachian"
-RRM_WAL_totalist_DEF:0 "Wallachia"
-RRM_WAL_syndicalist:0 "Wallachia"
-RRM_WAL_syndicalist_ADJ:0 "Wallachian"
-RRM_WAL_syndicalist_DEF:0 "Wallachia"
-RRM_WAL_radical_socialist:0 "Wallachia"
-RRM_WAL_radical_socialist_ADJ:0 "Wallachian"
-RRM_WAL_radical_socialist_DEF:0 "Wallachia"
-RRM_WAL_social_democrat:0 "Wallachia"
-RRM_WAL_social_democrat_ADJ:0 "Wallachian"
-RRM_WAL_social_democrat_DEF:0 "Wallachia"
-RRM_WAL_social_liberal:0 "Wallachia"
-RRM_WAL_social_liberal_ADJ:0 "Wallachian"
-RRM_WAL_social_liberal_DEF:0 "Wallachia"
-RRM_WAL_market_liberal:0 "Wallachia"
-RRM_WAL_market_liberal_ADJ:0 "Wallachian"
-RRM_WAL_market_liberal_DEF:0 "Wallachia"
-RRM_WAL_social_conservative:0 "Wallachia"
-RRM_WAL_social_conservative_ADJ:0 "Wallachian"
-RRM_WAL_social_conservative_DEF:0 "Wallachia"
-RRM_WAL_authoritarian_democrat:0 "Wallachia"
-RRM_WAL_authoritarian_democrat_ADJ:0 "Wallachian"
-RRM_WAL_authoritarian_democrat_DEF:0 "Wallachia"
-RRM_WAL_paternal_autocrat:0 "Wallachia"
-RRM_WAL_paternal_autocrat_ADJ:0 "Wallachian"
-RRM_WAL_paternal_autocrat_DEF:0 "Wallachia"
-RRM_WAL_national_populist:0 "Wallachia"
-RRM_WAL_national_populist_ADJ:0 "Wallachian"
-RRM_WAL_national_populist_DEF:0 "Wallachia"
+RRM_WAL_totalist:0 "왈라키아"
+RRM_WAL_totalist_ADJ:0 "왈라키아"
+RRM_WAL_totalist_DEF:0 "왈라키아"
+RRM_WAL_syndicalist:0 "왈라키아"
+RRM_WAL_syndicalist_ADJ:0 "왈라키아"
+RRM_WAL_syndicalist_DEF:0 "왈라키아"
+RRM_WAL_radical_socialist:0 "왈라키아"
+RRM_WAL_radical_socialist_ADJ:0 "왈라키아"
+RRM_WAL_radical_socialist_DEF:0 "왈라키아"
+RRM_WAL_social_democrat:0 "왈라키아"
+RRM_WAL_social_democrat_ADJ:0 "왈라키아"
+RRM_WAL_social_democrat_DEF:0 "왈라키아"
+RRM_WAL_social_liberal:0 "왈라키아"
+RRM_WAL_social_liberal_ADJ:0 "왈라키아"
+RRM_WAL_social_liberal_DEF:0 "왈라키아"
+RRM_WAL_market_liberal:0 "왈라키아"
+RRM_WAL_market_liberal_ADJ:0 "왈라키아"
+RRM_WAL_market_liberal_DEF:0 "왈라키아"
+RRM_WAL_social_conservative:0 "왈라키아"
+RRM_WAL_social_conservative_ADJ:0 "왈라키아"
+RRM_WAL_social_conservative_DEF:0 "왈라키아"
+RRM_WAL_authoritarian_democrat:0 "왈라키아"
+RRM_WAL_authoritarian_democrat_ADJ:0 "왈라키아"
+RRM_WAL_authoritarian_democrat_DEF:0 "왈라키아"
+RRM_WAL_paternal_autocrat:0 "왈라키아"
+RRM_WAL_paternal_autocrat_ADJ:0 "왈라키아"
+RRM_WAL_paternal_autocrat_DEF:0 "왈라키아"
+RRM_WAL_national_populist:0 "왈라키아"
+RRM_WAL_national_populist_ADJ:0 "왈라키아"
+RRM_WAL_national_populist_DEF:0 "왈라키아"
 
 RRM_MOL_totalist:0 "몰도바"
 RRM_MOL_totalist_ADJ:0 "몰도바"
