--- a/Kaiserreich Korean Translation/localisation/KR_United_Kingdom_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_United_Kingdom_l_english.yml
@@ -344,7 +344,7 @@ GBR_irish_home_rule_paternal_autocrat:0 "Dominion of Ireland"
 GBR_irish_home_rule_authoritarian_democrat:0 "Dominion of Ireland"
 GBR_irish_home_rule_national_populist:0 "Dominion of Ireland"
 
-GBR_bra_social_democrat:0 "British Reconstruction Authority
+GBR_bra_social_democrat:0 "British Reconstruction Authority"
 GBR_bra_social_liberal:0 "British Reconstruction Authority"
 GBR_bra_market_liberal:0 "British Reconstruction Authority"
 GBR_bra_social_conservative:0 "British Reconstruction Authority"
