--- a/Kaiserreich Korean Translation/localisation/KR_Australasia_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Australasia_l_english.yml
@@ -2,16 +2,16 @@
 
 ### Events ###
 
-australasia.1.t:0 "The Passing of King George V"
-australasia.1.d:0 "The ousted king of Britain, George V, has finally succumbed to the illness that had plagued him since revolution swept through the home isles. His son, Edward, has ascended the throne of the British Empire, including that of the Antipodean dominions."
-australasia.1.a:0 "The Entente enters a state of mourning..."
-australasia.2.t:0 "A Special Conference of the Australasian Labour Party"
-australasia.2.d:0 "Jack Lang was readmitted into the party after having been excluded for 5 years. Lang was originally excluded because of his dismissal from government by the contemporary governor of NSW Philip Game. A powerful orator and a populist through and through the re-admittance of Lang has caused consternation among the more leftist members of the Labour Party who, alongside much of trade union activists, see him more as a social feudalist inherently hostile to true socialist doctrine. It seems that the Australasian Labour Party is heading into a turbulent time."
-australasia.2.a:0 "Let the leftists squabble among themselves!"
-australasia.3.t:0 "The Government and Additional Funding for Military Training"
-australasia.3.d:0 "Both Australia and New Zealand had a troubled relationship with the idea of conscription during the Weltkrieg. In Australia two consecutive plebiscites about the introduction of conscription were narrowly defeated leaving the ANZACs and other Antipodean units strictly volunteer-only. However with the Entente's defeat and the ensuring German expansion in the Pacific following the 1925 British Revolution the federal government has been anxious about strengthening the fighting capabilities of the Australasian army navy and air force. Today the incumbent government of Billy Hughes has proposed increasing the military's training strength and funding as a result of the rising tension in Europe and Asia. Some see it as a staging point for the government to launch a campaign arguing for the introduction of conscription and the need for a swift militarisation of the Antipodean dominions."
-australasia.3.a:0 "Direct extra funds to military training!"
-australasia.3.b:0 "We shan't compromise the volunteer nature of the army!"
+australasia.1.t:0 "조지 5세의 서거"
+australasia.1.d:0 "쫓겨난 영국 국왕 조지 5세는 혁명이 영국 본토를 휩쓸고 지나간 이후 그동안 그를 괴롭혔던 병에 결국 눈을 감았습니다. 오스트랄라시아 자치령을 포함한 협상국 전체가 그의 죽음을 애도하는 한편, 대영제국의 새 왕좌에 오른 에드워드 8세를 축하하고 있습니다."
+australasia.1.a:0 "협상국 모두가 애도의 뜻을 전한다..."
+australasia.2.t:0 "오스트랄라시아 노동당 특별 총회"
+australasia.2.d:0 "잭 랭이 당에서 나온 지 5년 만에 재입당한다는 소식이 전해졌습니다. 그는 원래 주지사 NSW 필립 게임에 의해 당에서 해임되었습니다. 뛰어난 웅변가이자 대중적인 지지를 받고 있는 그는 본래 그를 봉건주의자로 간주해왔던 더욱 좌익 성향인 노동당 구성원들을 경악하게 만들기 충분했습니다. 오스트랄라시아 노동당은 혼란의 시기로 접어든 듯 보입니다."
+australasia.2.a:0 "좌파 놈들끼리 서로 반목하도록 놔두어라!"
+australasia.3.t:0 "정부와 군사 훈련을 위한 추가 자금"
+australasia.3.d:0 "호주 및 뉴질랜드는 세계 대전기부터 지금까지 징병제에 대한 반대에 어려움을 겪고 있습니다. 호주의 패배에는 병역 기피를 위해 ANZAC(호주 및 뉴질랜드)를 떠난 많은 이들도 한몫했습니다. 하지만 1925년 영국 혁명 후에 발생한 협상국의 패배에 대한 충격과 태평양에서의 독일의 확장을 저지하기 위해 연방 정부는 오스트랄라시아 육군과 공군의 전투력 강화에 대해 걱정해 왔습니다. 오늘 빌리 휴즈 현 정부는 유럽과 아시아 지역에서 고조되고 있는 긴장의 결과로 군대의 훈련과 자금을 늘려 군의 역량을 강화할 것을 제안했습니다. 이를 징병제 도입과 정부 차원의 신속한 무장의 필요성을 주장하는 운동을 정부가 벌일 수 있는 계기로 보는 시각도 있습니다."
+australasia.3.a:0 "군대 훈련과 역량 강화에 투자하자!"
+australasia.3.b:0 "우리는 모병제도를 건드리지 않을 것이다!"
 australasia.4.t:0 "Charles Vyner Brooke Backs the New Guard"
 australasia.4.d:0 "The exiled 'White Rajah' of Sarawak and noted Sydney socialite Charles Vyner Brooke has now openly begun to associate with the reactionary grouping known as 'the New Guard' led by Weltkrieg veteran Eric Campbell. Until now the Guard has been a minor force in Australasian politics but with their forceful revanchist rhetoric and populist flair the movement has begun to spread its influence beyond New South Wales especially gaining support among discharged servicemen and disgruntled officers. With Brooke's charm and considerable monetary resources the New Guard might just have gained the staging point for a showdown with the supposedly complacent and stagnating policies of Hughes and Bruce. The government should be prepared for any eventuality."
 australasia.4.a:0 "What's a Bruce to do?"
