--- a/Kaiserreich Korean Translation/localisation/KR_Union_of_Britain_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Union_of_Britain_l_english.yml
@@ -549,107 +549,107 @@ uob.95.a:0 "우리는 현 상황을 유지해야 한다"
 uob.95.b:0 "아일랜드의 지배는 실수였다, 해방하라!"
 uob.95.c:0 "극단적 시기에는 극단적 방식이 필요하다!"
 uob.96.t:0 "아일랜드를 관리하다"
-uob.96.d:0 "Ever since we annexed Ireland IRA have been persistently resisting our forces, determined to restore Irish independence. With our state destablised by the Irish guerrilla war we have three options, we could try to weather the storm, grant Ireland their independence as a socialist republic, or use drastic measures such as internment to restore order."
-uob.96.a:0 "We must weather the storm.."
-uob.96.b:0 "Our rule of Ireland was a mistake, free them!"
-uob.96.c:0 "Drastic times call for drastic measures!"
-uob.97.t:0 "Operation Demetrius"
-uob.97.d:0 "Today, the military operation codenamed "Demetrius" began, with our armies occupying many areas of Ireland and interning IRA partisans despite large rebel and civilian resistance. However outside of Leinster where our forces and administration are centralised Irish resistance could potentially be enough to overpower our armies.."
-uob.97.a:0 "Irish rebels outside of Leinster start an uprising!"
-uob.98.t:0 "Fall of the Irish resistance"
-uob.98.d:0 "With the crushing of the Irish uprising the Irish resistance has for now been broken for now, although the Irish still resent us and remember the Irish Republic and will no doubt resist us once again in the future."
-uob.98.a:0 "It's over for now.."
-uob.99.t:0 "Operation Demetrius"
-uob.99.d:0 "Today, the military operation codenamed "Demetrius" began, with our armies occupying many areas of Ireland and interning IRA partisans despite large rebel and civilian resistance. However outside of Leinster where our forces and administration are centralised Irish resistance could potentially be enough to overpower our armies.."
-uob.99.a:0 "Irish rebels in Connacht and Munster start an uprising!"
-uob.100.t:0 "Operation Demetrius"
-uob.100.d:0 "Today, the military operation codenamed "Demetrius" began, with our armies occupying many areas of Ireland and interning IRA partisans despite large rebel and civilian resistance. However outside of Leinster where our forces and administration are centralised Irish resistance could potentially be enough to overpower our armies.."
-uob.100.a:0 "Irish rebels in Munster start an uprising!"
+uob.96.d:0 "아일랜드를 합병한 이후로 IRA는 IRA는 끈질기게 우리에게 저항하며, 아일랜드의 독립을 복원하기 위해 단호하다. 아일랜드 게릴라로 인해 우리의 상황은 불안전해 졌으며 우리는 세가지 선택권이 있는데, 고비를 넘기려 노력하거나, 아일랜드에 사회주의 공화국으로의 독립을 허가하거나, 억류와 같은 극단적 방식을 통해 질서를 되돌릴 수 있다."
+uob.96.a:0 "우리는 고비를 넘겨야 한다.."
+uob.96.b:0 "아일랜드의 지배는 실수였다, 해방하라!"
+uob.96.c:0 "극단적 시기에는 극단적 방식이 필요하다!"
+uob.97.t:0 "작전명 디미트리오스"
+uob.97.d:0 "오늘 “디미트리오스”라 명명된 군사 작전을 개시하였고, 우리의 군대는 대량의 반군과 민간 저항을 맞이하며 아일랜드의 곳곳을 점거하고 IRA 저항군을 억류했다. 하지만 우리의 군사력과 행정력이 미치지 않는 렌스터 외곽은 아일랜드 저항의 중심지이고 우리의 전력을 압도할 가능성이 있다…"
+uob.97.a:0 "렌스터 외곽의 반군이 봉기를 시작하였다!"
+uob.98.t:0 "아일랜드 저항의 몰락"
+uob.98.d:0 "아일랜드 봉기의 제압을 통해 아일랜드 저항은 현재로서는 제압되었으나, 아일랜드인들은 여전히 우리에 대해 분개하며 아일랜드 공화국을 기억하며 미래에 우리에 대항해 저항할 것은 당연할 것이다."
+uob.98.a:0 "지금은 끝났군.."
+uob.99.t:0 "작전명 디미트리오스"
+uob.99.d:0 "오늘 “디미트리오스”라 명명된 군사 작전을 개시하였고, 우리의 군대는 대량의 반군과 민간 저항을 맞이하며 아일랜드의 곳곳을 점거하고 IRA 저항군을 억류했다. 하지만 우리의 군사력과 행정력이 미치지 않는 렌스터 외곽은 아일랜드 저항의 중심지이고 우리의 전력을 압도할 가능성이 있다…"
+uob.99.a:0 "코노트와 뮌스터의 반군이 봉기를 시작하였다!"
+uob.100.t:0 "작전명 디미트리오스"
+uob.100.d:0 "오늘 “디미트리오스”라 명명된 군사 작전을 개시하였고, 우리의 군대는 대량의 반군과 민간 저항을 맞이하며 아일랜드의 곳곳을 점거하고 IRA 저항군을 억류했다. 하지만 우리의 군사력과 행정력이 미치지 않는 렌스터 외곽은 아일랜드 저항의 중심지이고 우리의 전력을 압도할 가능성이 있다…"
+uob.100.a:0 "뮌스터의 반군이 봉기를 시작하였다!"
 
 ### 101 - 150: Office Events ###
-uob.101.t:0 "The office of General Secretary"
-uob.101.d:0 "Now that the a new Chairman has finally been chosen many are urging to quickly choose a new General Secretary and end the period of uncertainty in British politics."
-uob.101.aa:0 "The Congregationists are our closest allies"
-uob.101.ab:0 "A compromise with the Maximists is in order"
-uob.101.ac:0 "Niclas y Glais would make a much better general secretary"
-uob.101.ad:0 "Eric Blair is the best choice in this matter"
-uob.101.ae:0 "Arthur Horner would make a much better general secretary"
-uob.101.af:0 "Christabel Pankhurst will improve women's rights all over Britain"
-uob.101.ag:0 "Lewis Jones would make a much better general secretary"
-uob.101.ah:0 "I have total confidence in the abilities of Tom Mann"
-uob.102.t:0 "Merge the Posts of Chairman & General Secretary"
-uob.102.d:0 "We can merge the positions of Chairman and General Secretary. While this is very much unconstitutional it will also very much strengthen our own position."
-uob.102.a:0 "A strong leader for the Union!"
-uob.102.b:0 "This doesn't seem like a good idea..."
-uob.103.t:0 "Merge the Posts of Chairman & General Secretary"
-uob.103.d:0 "We can merge the positions of Chairman and General Secretary. While this is very much unconstitutional it will also very much strengthen our own position."
-uob.103.a:0 "A strong leader for the Union!"
-uob.103.b:0 "This doesn't seem like a good idea..."
-uob.104.t:0 "Merge the Posts of Chairman & General Secretary"
-uob.104.d:0 "We can merge the positions of Chairman and General Secretary. While this is very much unconstitutional it will also very much strengthen our own position."
-uob.104.a:0 "A strong leader for the Union!"
-uob.104.b:0 "This doesn't seem like a good idea..."
-uob.105.t:0 "Merge the Posts of Chairman & General Secretary"
-uob.105.d:0 "We can merge the positions of Chairman and General Secretary. While this is very much unconstitutional it will also very much strengthen our own position."
-uob.105.a:0 "A strong leader for the Union!"
-uob.105.b:0 "This doesn't seem like a good idea..."
-uob.106.t:0 "The Exchequer's post"
-uob.106.d:0 "With Mosley securing his power in the TUC, he has to make up his mind about the Exchequer's office. His retaining his post would create a concentration of power that is not only prohibited by the Union's constitution but may also affect the quality of Maximist rule. The only problem is choosing a suitable candidate."
-uob.106.aa:0 "Abe Moffat, director of the Coventry Machine Plants"
-uob.106.ab:0 "David Kirkwood, former militia commander"
-uob.106.ac:0 "Nye Bevan, creator of the Union's Health Service"
-uob.106.ad:0 "Mosley has proven his efficiency and shall remain despite the constitution!"
-uob.107.t:0 "The R.A.F. Doctrine Dispute"
-uob.107.d:0 "The Republican Air Force has in the last few years gone through major restructuring and is now once again an effective air force. One question, however, remains; That of its doctrine. Leading theorists have identified three major categories of possible instructions for our pilots and all have proponents. Arthur Harris, a Rhodesian comrade, who came to the Union after the German occupation of his chosen home, is speaking for Strategic Destruction, Arthur Tedder speaks for Battlefield Support while the infamous John Chamier wants Operational Integrity."
-uob.107.a:0 "Bomber Harris, do it again!"
-uob.107.b:0 "Battlefield Support is where it's at!"
-uob.107.c:0 "We need Operational Integrity!"
-uob.108.t:0 "A new Lee Enfield?"
-uob.108.d:0 "The rifles supplied by the factories formerly owned by Lee Enfield still constitute the overwhelming majority of our infantry weapons. However, at least under gun connoisseurs, the weapons produced by the Birmingham Small Arms Factory have the reputation of being more suitable for offensive manoeuvres and change might be in order. A third option would be to not prefer one of the both and keep the Republican Army flexible instead."
-uob.108.a:0 "Another trusty Enfield."
-uob.108.b:0 "Give Birmingham a chance!"
-uob.108.c:0 "Stay flexible!"
-uob.109.t:0 "A New 1066"
-uob.109.d:0 "Enemies of Syndicalism have gained a foothold on our island! The nation will fully mobilise all reserves to rid itself of this disease!"+
-uob.109.a:0 "To arms, comrades!"
+uob.101.t:0 "서기장직"
+uob.101.d:0 "새로운 의장이 선출되었으므로 많은 사람들은 브리튼의 정치 불확실성을 끝내기 위해 새로운 서기장을 뽑을 것을 요구한다."
+uob.101.aa:0 "Congregationists 는 우리의 가장 가까운 동맹이다"
+uob.101.ab:0 "Maximists와의 타협이 올바른 순서다"
+uob.101.ac:0 "니클라스 y 글라이스가 서기장에 훨씬 더 어울린다"
+uob.101.ad:0 "이 문제에서는 에릭 블레어가 최선의 선택이다"
+uob.101.ae:0 "아서 호너가 서기장직에 더 어울릴 것이다"
+uob.101.af:0 "크리스타벨 판쿠르츠가 전 브리튼의 여성 권익을 향상시킬 것이다"
+uob.101.ag:0 "루이스 존스가 서기장직에 더 어울릴 것이다"
+uob.101.ah:0 "톰 만의 능력을 십분 믿는다"
+uob.102.t:0 "의장직과 서기장직을 합치다"
+uob.102.d:0 "우리는 의장직과 서기장직을 합칠 수 있다. 이는 매우 비 헌법적이기는 하지만 우리의 위치를 매우 강화할 수 있을 것이다."
+uob.102.a:0 "연방에게 더 강한 지도자를!"
+uob.102.b:0 "좋은 생각처럼 보이지 않는다…"
+uob.103.t:0 "의장직과 서기장직을 합치다"
+uob.103.d:0 "우리는 의장직과 서기장직을 합칠 수 있다. 이는 매우 비 헌법적이기는 하지만 우리의 위치를 매우 강화할 수 있을 것이다."
+uob.103.a:0 "연방에게 더 강한 지도자를!"
+uob.103.b:0 "좋은 생각처럼 보이지 않는다…"
+uob.104.t:0 "의장직과 서기장직을 합치다"
+uob.104.d:0 "우리는 의장직과 서기장직을 합칠 수 있다. 이는 매우 비 헌법적이기는 하지만 우리의 위치를 매우 강화할 수 있을 것이다."
+uob.104.a:0 "연방에게 더 강한 지도자를!"
+uob.104.b:0 "좋은 생각처럼 보이지 않는다…"
+uob.105.t:0 "의장직과 서기장직을 합치다"
+uob.105.d:0 "우리는 의장직과 서기장직을 합칠 수 있다. 이는 매우 비 헌법적이기는 하지만 우리의 위치를 매우 강화할 수 있을 것이다."
+uob.105.a:0 "연방에게 더 강한 지도자를!"
+uob.105.b:0 "좋은 생각처럼 보이지 않는다…"
+uob.106.t:0 "재무부직"
+uob.106.d:0 "모즐리가 TUC에서 권력을 확보한 뒤, 그는 재무부에 대한 자신의 관점을 피력하려 한다. 그의 의장과 재무부장의 겸직은 연방의 헌법을 위반하는 권력의 집중을 불러올 뿐만 아니라 Maximist의 지배의 질에도 영향을 끼칠 것이다. 단 하나의 문제는 적절한 후보를 고르는 것이다."
+uob.106.aa:0 "에이브 모팻, 코벤트리 기계 공장의 감독관"
+uob.106.ab:0 "데이비드 커크우드, 전 민병대 지휘관"
+uob.106.ac:0 "나이 베반, 연방 의료 보험의 창시자"
+uob.106.ad:0 "모즐리는 그의 능력을 증명하였으며 헌법을 무시하고 직위를 유지할 것이다!"
+uob.107.t:0 "R.A.F. 교리 분쟁"
+uob.107.d:0 "공화국 공군은 몇 년간의 주요한 재건을 겪어왔고 이제 다시 한번 효과적인 공군이 되었다. 하지만, 질문 하나가 남아있다; 교리에 대한 것이 그것이다. 선도적 이론가들은 우리의 파일럿들을 위해 각각 장점이 있는 3가지의 유효한 교육법을 확정하였다. 그의 고향이 독일에 점거된 이후 연방으로 온 로데시아 출신 동지인 아서 해리스는 전략적 파괴를 주장하고, 아서 테더는 전장지원을 주장하며, 악명높은 존 채미어는 작전상의 무결성을 원한다"
+uob.107.a:0 "폭격기 해리스, 한번 더!"
+uob.107.b:0 "전장지원이 있어야 할 자리이다!"
+uob.107.c:0 "우리는 작전상의 무결성이 필요하다!"
+uob.108.t:0 "새로운 리 엔필드?"
+uob.108.d:0 "이전에 리 엔필드 소유였던 공장에서 보급되는 소총은 우리의 보병 병기 중 압도적 다수를 차지하고 있다. 하지만 일부 화기 평가자들은 버밍엄 소구경 병기 회사에서 생산되는 무기가 공격적인 작전에 조금 더 적합하다는 명성을 가지고 있음을 바탕으로 화기의 전환이 적절하다고 여긴다. 세 번째 선택은 두 선택지 중에서 한쪽에 쏠리지 않고 공화국군을 유연하게 유지하는 것이다."
+uob.108.a:0 "또다른 믿을만한 리 엔필드."
+uob.108.b:0 "버밍엄에 기회를!"
+uob.108.c:0 "유연성을 유지하라!"
+uob.109.t:0 "새로운 1066년"
+uob.109.d:0 "생디칼리즘의 적들이 우리 섬에 교두보를 만들었다! 국가는 이 질병들을 스스로 제거하기 모든 예비 전력을 최대한 동원할 것이다"+
+uob.109.a:0 "무장하시오,동지들!"
 
 ### 151 - 189: T. E. Lawrence ###
-uob.150.t:0 "T.E. Lawrence offers his services"
-uob.150.d:0 "Veteran agitator and aid to the Arab Revolt in the Great War T.E. Lawrence has kept a low profile in the Union so far. However, three years ago he narrowly avoided death in a motorcycle accident that ended years of aimless wandering through life. Today he approached Army High Command and offered to train as an agitator to help European Syndicalists rise up during the eventual war with Germany."
-uob.150.a:0 "Lawrence shall be valuable in spreading the revolution"
-uob.150.b:0 "We don't trust him - where are his Socialist credentials?"
-uob.151.t:0 "Send Lawrence to Germany?"
-uob.151.d:0 "T.E. Lawrence has asked permission to be air-dropped behind German lines and rendezvous with Syndicalist leaders in the Rhine and Saarland regions of Germany to raise raiding parties and potentially a revolt."
-uob.151.a:0 "Good luck, Lawrence of Germania!"
-uob.151.b:0 "We cannot spare the funds"
-uob.152.t:0 "T.E. Lawrence is back and raising hell!"
-uob.152.d:0 "Our commanders in the Saarland and Rhineland regions indicate that the former scourge of the Ottomans, T.E. Lawrence, along with other agitators and agents, is travelling through the countryside and working with local underground Syndicalist movements to sabotage elements of German industry! They must be stopped at once!"
-uob.152.a:0 "Damn you, Lawrence of Germania!"
-uob.153.t:0 "T.E. Lawrence has moved north!"
-uob.153.d:0 "That damned T.E. Lawrence is continuing to cause trouble, growing bolder as he moves his band of reds (who are blending in with the civilian population irritatingly well) into our northern Rhineland cities. He cannot be allowed to carry on!"
-uob.153.a:0 "Damn you, Lawrence of Germania!"
-uob.154.t:0 "T.E. Lawrence has moved east!"
-uob.154.d:0 "That damned T.E. Lawrence is continuing to cause trouble, growing bolder as he moves his band of reds (who are blending in with the civilian population irritatingly well) into our central industrial cities. The chief of the Reich's security services has promised the Kaiser this will be the last time he and his 'merry men' can wreak havoc in this way. They have set a trap for him in Dresden."
-uob.154.a:0 "Damn you, Lawrence of Germania!"
-uob.155.t:0 "T.E. Lawrence has barely escaped with his life!"
-uob.155.d:0 "German security forces snapped their trap on Comrade Lawrence while he and German Syndicalist fighters, one of them the writer Bertolt Brecht, were planting bombs in a factory in Dresden. While Lawrence managed to escape to the coast where a French submarine was able to take him back to Britain he was shot in the leg and can no longer walk without a cane. His time as an agitator is over, but his time as a Syndicalist hero has only just begun."
-uob.155.a:0 "Hoorah for Lawrence of Germania!"
-uob.155.b:0 "Good enough."
-uob.156.t:0 "T.E. Lawrence has been killed!"
-uob.156.d:0 "German security forces snapped their trap on Comrade Lawrence while he and local Syndicalist fighters were planting bombs in a factory in Dresden. While Lawrence managed to secure the escape of his fellow revolters he was shot square in the chest and died on the spot. His time as an agitator is over, but his time as a Syndicalist hero has only just begun."
-uob.156.a:0 "To absent friends! Hoorah for Lawrence of Germania!"
-uob.156.b:0 "Good."
-uob.157.t:0 "Counterrevolution in Britain!"
-uob.157.d:0 "The Syndicalist experiment in Britain is over! The military, commanded by the war hero T.E. Lawrence, also known as 'Lawrence of Arabia' or 'Lawrence of Germania' has taken control. The background of the coup is unclear; It seems that infighting between the wings of the Syndicalist government is involved. Lawrence has called for an immediate cease-fire at all fronts, he wants to bring the British troops back home and begin the process of reinstating the monarchy."
-uob.157.a:0 "Hoorah for Lawrence of Britannia!"
-uob.157.b:0 "Damn him!"
-uob.157.c:0 "The nightmare is over!"
-uob.158.t:0 "What now?"
-uob.158.d:0 "Interim Chairman Lawrence has never been comfortable ruling a socialist nation such as ours. A good man and loyal Briton at heart, he was more at home agitating foreign peoples than overseeing five-year plans. Comrade Wintringham approached him and asked if he will allow a Congress to meet as soon as possible and establish a new civilian government - or maybe he has other ideas..."
-uob.158.a:0 "Lawrence is secretly a Monarchist and launches a counter-revolution!"
-uob.158.b:0 "Civilians? Pah! Though this socialism thing is growing on me..."
-uob.158.c:0 "The Federationists secure the majority."
-uob.158.d:0 "Congregationists and Autonomists form a pact!"
+uob.150.t:0 "T.E. 로렌스가 그의 복무를 요청하다"
+uob.150.d:0 "경험많은 선동가와 대전기의 아랍 반란을 지원한 T.E. 로렌스는 그동안 연방에서 눈에 띄지 않았다. 하지만 3년 전의 오토바이 사고에서 겨우 살아남은 뒤로 그는 인생에서 목표 없이 방황하는 나날에 종지부를 찍었다. 오늘 그는 군 총사령부에 접촉하여 궁극적인 독일과의 전쟁 동안의 유럽 생디칼리스트를 도와줄 선동가로의 훈련을 제공할 용의가 있음을 알렸다."
+uob.150.a:0 "로렌스는 혁명의 전파에 도움이 될 것이다"
+uob.150.b:0 "우리는 그를 믿을 수  없다 - 그가 사회주의자라는 보장이 어디 있나?"
+uob.151.t:0 "로렌스를 독일로 보내야 하는가?"
+uob.151.d:0 "T.E 로렌스가 독일 전선 후방으로 공중 강하하여 라인과 자를란트 지역에 있는 생디칼리스트 지도자들과 접선해 습격대의 육성과 잠재적 반란을 유도하는 것에 대한 허가를 요청해 왔다."
+uob.151.a:0 "행운을 비네, 게르마니아의 로렌스!"
+uob.151.b:0 "우리는 그런 데에 예산을 쓰지 못한다"
+uob.152.t:0 "T.E 로렌스가 후방에서 지옥을 만들다!"
+uob.152.d:0 "자를란트와 라인란트 지역의 장교들이 과거에 오스만을 좀먹은 T.E 로렌스가 다른 선동가들과 요원들과 함께 시골지방을 이동하며 지역 비밀 생디칼리스트 운동권과 함께 독일 산업의 핵심을 사보타주를 시도한다는 보고를 하였다! 이를 신속히 막아야 한다!"
+uob.152.a:0 "저주한다, 게르마니아의 로렌스!"
+uob.153.t:0 "T.E 로렌스가 북쪽으로 이동하다!"
+uob.153.d:0 "저주받을 T.E. 로렌스는 지속적으로 문제를 일으키며 그의 점점 더 대담해지는 적색 행동단(시민들과 짜증날 정도로 훌륭하게 섞이는)과 함께 우리의 북부 라인란트 도시로 이동하였다. 그가 계속하도록 놔둘 수는 없다!"
+uob.153.a:0 "저주한다, 게르마니아의 로렌스!"
+uob.154.t:0 "T.E 로렌스가 동쪽으로 이동하다!"
+uob.154.d:0 "저주받을 T.E. 로렌스는 지속적으로 문제를 일으키며 그의 점점 더 대담해지는 적색 행동단(시민들과 짜증날 정도로 훌륭하게 섞이는)과 함께 중요한 산업 도시로 이동하였다. 제국 치안 유지 담당관은 카이저께 이번이 그와 그의 ‘활달한 사람들’이 이런 식으로 파괴활동을 하는 것이 마지막이 될 것이라 약속하였다. 그들은 드레스덴에 그를 위한 함정을 준비하였다."
+uob.154.a:0 "저주한다, 게르마니아의 로렌스!"
+uob.155.t:0 "T.E. 로렌스가 살아서 겨우 빠져나오다!"
+uob.155.d:0 "독일 치안유지대가 로렌스 동무를 향한 함정을 파 놓은 동안, 독일인 작가인 베르톨트 브레힐트가 참여한 독일인 생디칼리스트 투사들과 그는 드레스덴의 공장에 폭탄을 설치하고 있었다. 로렌스가 해안가로 겨우 탈출한 뒤 프랑스 잠수함이 그를 브리튼으로 후송해 왔으나 그는 다리에 총을 맞고 지팡이 없이는 다시는 걸을 수 없게 되었다. 그의 선동가로의 경력은 끝났으나, 생디칼리스트 영웅으로의 경력은 이제 시작일 뿐이다."
+uob.155.a:0 "게르마니아의 로렌스에 경배를!"
+uob.155.b:0 "그정도면 훌륭하다."
+uob.156.t:0 "T.E. 로렌스가 목숨을 잃다!"
+uob.156.d:0 "독일 치안유지대가 로렌스 동무를 향한 함정을 파 놓은 동안, 그와 독일인 생디칼리스트 투사들은 드레스덴의 공장에 폭탄을 설치하고 있었다. 로렌스가 그의 동지 반란군들과 함께 탈출에 겨우 성공하던 때에 그는 가슴 한가운데에 총을 맞고 그 자리에서 즉사하였다. 그의 선동가로의 경력은 끝났으나, 생디칼리스트 영웅으로의 경력은 이제 시작일 뿐이다."
+uob.156.a:0 "이제는 없는 동지여! 게르마니아의 로렌스에 경배를!"
+uob.156.b:0 "훌륭하다."
+uob.157.t:0 "브리튼에서의 반혁명!"
+uob.157.d:0 "브리튼에서의 생디칼리즘 실험은 끝났다! ‘아라비아의 로렌스’ 로 알려진 전쟁 영웅인 T.E. 로렌스가 이끄는 군부는 통제권을 얻었다. 이 쿠데타의 배경은 불확실하지만; 생디칼리스트 정부 내의 분파간 분쟁이 연관되어 보인다.  로렌스는 전 전선에서의 신속한 교전 중지를 명령하였으며, 그는 영국인 군인들의 집으로의 귀환과 왕정복고 진행의 시작을 원한다."
+uob.157.a:0 "브리타니아의 로렌스에 경배를!"
+uob.157.b:0 "망할 놈!"
+uob.157.c:0 "악몽은 끝났다!"
+uob.158.t:0 "이제 어쩌지?"
+uob.158.d:0 "임시 의장인 로렌스는 우리와 같은 사회주의 국가를 다루는 것에 대해 편안해 보이지 않는다. 심적으로 선인이고 충성스러운 영국인인지라, 그는 외국인들을 선동하는 것을 5개년 계획을 관리하는 것보다 더욱 편하게 여긴다. 윈트링엄 동지가 그에게 접근해 의회를 구성하는 것을 허가하고 신속하게 새로운 민간 정부의 수립을 요청하였다 – 아니면 그는 다른 계획이 있을 것이다…"
+uob.158.a:0 "로렌스는 사실 군주제주의자였으며 반 혁명을 개시한다!"
+uob.158.b:0 "민간? 하! 사회주의가 내 마음 속에 자리잡았다…"
+uob.158.c:0 "Federationists가 과반을 확보하다."
+uob.158.d:0 "Congregationists 와 Autonomists가 조약을 !"
 
 ### 201 - 300 Events ###
 uob.201.t:0 "Revolution!"
